# learnforge

./: README.md  app.py  app_old_2.py  app_old_3.py  app_old_4.py  app_old_5.py  ingest.py  main.py  pyproject.toml  rag_agent.py  rag_agent_after.py  requirements.txt  retrievers.py  retrievers_after.py  written_report.doc  written_report.md
.qdrant/: meta.json
eval/: golden_dataset.jsonl  results.csv  results_after.csv  results_before_old.csv  run_ragas.py  run_ragas_after.py
kb/: pyproject.toml  session_01.md  session_02.md  session_03.md  session_04.md  session_05.md  session_06.md  session_07.md  session_08.md  session_09.md  session_10.md  session_11.md
